crates/harness-monitor/src/snapshots/harness_monitor__tui__tests__routa_watch_tui_file_preview.snap
---
source: crates/harness-monitor/src/tui_tests.rs
assertion_line: 671
expression: "render_snapshot(&state, &mut cache, 120, 24)"
---
 Harness Monitor   repo:routa-js  branch:main  agents:2 active:1  dirty:2  untracked:0  unattributed:1  synced 2m ago
┌Git Status──────────────────────────────────────────────────────────────────────────┐┌File Preview────────────────────┐
│ 2 files, 0 untracked, 5 commits, workspace: project, 1 agent, branch: main, 2 workt││ 1 fn render(frame: &mut Frame) │
│────────────────────────────────────────────────────────────────────────────────────││{                               │
│> tui.rs                                        src/             M  +38 -5     4m   ││ 2     // preview               │
│  route.ts                                      card/            D  -12        5m   ││ 3 }                            │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    ││                                │
│                                                                                    │└────────────────────────────────┘
│                                                                                    │┌File Detail─────────────────────┐
│                                                                                    ││tui.rs                          │
│                                                                                    ││crates/harness-monitor/src      │
│                                                                                    ││Lines: ...  Size: ...  Git      │
│                                                                                    ││changes: ...                    │
│                                                                                    ││                                │
│                                                                                    ││                                │
└────────────────────────────────────────────────────────────────────────────────────┘└────────────────────────────────┘
Tab Runs/Files/Detail/Fitness  ↑↓ select  S run sort  v run filter  u unknown  d preview/diff  Pg scroll  f follow:on  T
